[gd_scene load_steps=7 format=2]

[ext_resource path="res://Star.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Bird.tscn" type="PackedScene" id=3]
[ext_resource path="res://bg.png" type="Texture" id=4]
[ext_resource path="res://water.png" type="Texture" id=5]
[ext_resource path="res://beach.png" type="Texture" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )
power = 15

[node name="Background" type="Node" parent="."]

[node name="Bg" type="Sprite" parent="Background"]
position = Vector2( 611, -9 )
scale = Vector2( 0.437, 0.437 )
texture = ExtResource( 4 )

[node name="Bg2" type="Sprite" parent="Background"]
position = Vector2( 4981, -9 )
scale = Vector2( 0.437, 0.437 )
texture = ExtResource( 4 )

[node name="Bg3" type="Sprite" parent="Background"]
position = Vector2( 2796, -9 )
scale = Vector2( 0.437, 0.437 )
texture = ExtResource( 4 )

[node name="Beach" type="Sprite" parent="Background"]
position = Vector2( 611, 417 )
scale = Vector2( 0.437, 0.437 )
texture = ExtResource( 6 )

[node name="Star" parent="." instance=ExtResource( 1 )]
position = Vector2( 90, 407 )

[node name="Camera2D" type="Camera2D" parent="Star"]
position = Vector2( 200, -90 )
current = true

[node name="AngleLabel" type="Label" parent="Star/Camera2D"]
margin_left = -265.0
margin_top = 22.0
margin_right = -135.0
margin_bottom = 72.0
text = "1"

[node name="PowerLabel" type="Label" parent="Star/Camera2D"]
margin_left = -265.0
margin_top = 53.0
margin_right = -225.0
margin_bottom = 67.0
text = "1"

[node name="ScoreLabel" type="Label" parent="Star/Camera2D"]
margin_left = 413.0
margin_top = -281.0
margin_right = 453.0
margin_bottom = -267.0
text = "0"

[node name="Birds" type="Node" parent="."]

[node name="Bird" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 498, 320 )

[node name="Bird2" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 2526, -420 )

[node name="Bird3" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 830, 134 )

[node name="Bird4" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 2356, 312 )

[node name="Bird5" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1613, 346 )

[node name="Bird6" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1472, 260 )

[node name="Bird7" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1213, -89 )

[node name="Bird8" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1160, 204 )

[node name="Bird9" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1736, 112 )

[node name="Bird10" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1984, 383 )

[node name="Bird11" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 2258, 83 )

[node name="Bird12" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 2153, -62 )

[node name="Bird13" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1753, -215 )

[node name="Bird14" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 2702, -151 )

[node name="Bird15" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 2627, 239 )

[node name="Bird16" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 3007, 112 )

[node name="Bird17" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 3225, 70 )

[node name="Bird18" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 3484, -156 )

[node name="Bird19" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 3676, 266 )

[node name="Bird20" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 3074, 362 )

[node name="Bird21" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 4278, 219 )

[node name="Bird22" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 3943, -112 )

[node name="Bird23" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 1916, 200 )

[node name="Bird24" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 4760, 245 )

[node name="Bird25" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 4660, -178 )

[node name="Bird26" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 5016, -293 )

[node name="Bird27" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 5310, 107 )

[node name="Bird28" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 5660, 352 )

[node name="Bird29" parent="Birds" instance=ExtResource( 3 )]
position = Vector2( 5608, -74 )

[node name="Water" type="Node" parent="."]

[node name="Water1" type="Sprite" parent="Water"]
visible = false
position = Vector2( 611, 636 )
scale = Vector2( 0.437, 0.437 )
texture = ExtResource( 5 )

[node name="Water2" type="Sprite" parent="Water"]
position = Vector2( 4981, 636 )
scale = Vector2( 0.437, 0.437 )
texture = ExtResource( 5 )

[node name="Water3" type="Sprite" parent="Water"]
position = Vector2( 2796, 636 )
scale = Vector2( 0.437, 0.437 )
texture = ExtResource( 5 )
flip_h = true

[node name="AngleTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="PowerTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="throw" from="." to="Star" method="throw"]
[connection signal="throwable" from="Star" to="." method="_on_Star_throwable"]
[connection signal="timeout" from="AngleTimer" to="." method="_on_AngleTimer_timeout"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_PowerTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
